static/window/styles/fancy.css
/* ------ General ------ */
:root {
  /* ------- Layout Variables ------- */
  --color__aaa: var(--layout__secondary-text-color);
  --color__playlist-description-while-edititng: #ffffff;
  --color__no-theme-suggestion: #bfbfbf;
  /* Text */
  --layout__primary-text-color: #f1f1f1;
  --layout__secondary-text-color: #aaaaaa;
  --layout__highlighted-text-color: #ffffff;
  --layout__disabled-text-color: #9b9b9b;
  /* Background */
  --layout__primary-background: #1b1b1c;
  --layout__secondary-background: #2d2d30;
  /* Theme Variables */
  --theme__font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  --theme__text-disabled-color: #9b9b9b;
  --theme__background-color: #1b1b1c;
  --theme__search-bar__background-color: #1b1b1d;
  --theme__search-bar__outline-color: #47474d;
  --theme__title-bar__background-color: #141417;
  --theme__scrollbar__color: #585858;
  --theme__scrollbar__color-hover: #505050;
  --theme__scrollbar__color-active: #404040;
  --theme__slider__color: #4d4f55;
  --theme__slider__color-hover: #43454b;
  --theme__slider__color-active: #2e2f33;
  --theme__browse-sidebar__background-color: #181819;
  --theme__browse-sidebar__divider__background-color: #131313;
  --theme__header__background-color: #2d2d30;
  --theme__footer__background-color: #2a2a2b;
  --theme__playlist-list-item-even__background-color: #1e1e1f;
  --theme__playlist-list-fake-item__background-color: #19191b;
  --theme__game-item__color: #aaaaaa;
  --theme__game-item__color-hover: #e6e6e6;
  --theme__game-item__color-selected: #cecece;
  --theme__game-item__color-selected-hover: #e6e6e6;
  --theme__game-item__background-color-hover: #3c3c41;
  --theme__game-item__background-color-selected: #791c76;
  --theme__game-item__background-color-selected-hover: #a72aa2;
  --theme__game-list-item__background-color-even: #1e1e1f;
  --theme__game-item-thumb__image-rendering: normal;
  /* Pimp */
  color: var(--layout__primary-text-color);
}

body {
  background-color: var(--theme__background-color);
  font-family: var(--theme__font-family);
}

:link {
  color: var(--layout__highlighted-text-color);
}


/* ------ Icons ------ */
.icon__use {
  fill: var(--layout__highlighted-text-color);
}


/* ------ Generic & Re-usable ------ */
/* Simple Button */
.simple-button {
  background-color: #2d2d30;
  border-color: var(--theme__search-bar__outline-color);
  color: var(--layout__primary-text-color);
}
.simple-button:hover {
  background-color: #434346;
  border-color: #6f6f75;
}
.simple-button:disabled {
  color: var(--theme__text-disabled-color);
}
.simple-button--red {
  background-color: #5a1010;
  border-color: #731919;
}
.simple-button--red:hover {
  background-color: #731616;
  border-color: #a22020;
}
/* Simple Selector */
.simple-selector {
  border-color: var(--theme__search-bar__outline-color);
  /* Pimp */
  font-family: var(--theme__font-family);
  background-color: var(--theme__background-color);
  color: var(--layout__primary-text-color);
}
/* Simple Scroll(bar) */
.simple-scroll::-webkit-scrollbar-track {
  box-shadow: inset 0 0 calc(0.25 * var(--scrollbar-size)) rgba(0, 0, 0, 0.25);
  background-color: rgba(0, 0, 0, 0.085);
  border-radius: calc(0.5 * var(--scrollbar-size));
}
.simple-scroll::-webkit-scrollbar-thumb:hover {
  background-color: var(--theme__scrollbar__color-hover);
}
.simple-scroll::-webkit-scrollbar-thumb:active {
  background-color: var(--theme__scrollbar__color-active);
}
/* Simple Input (Input text field) */
.simple-input {
  color: var(--layout__primary-text-color);
  background-color: #313131;
}
/* Simple Disabled Text */
.simple-disabled-text {
  color: var(--layout__disabled-text-color);
}
/* Checkbox Dropdown */
.checkbox-dropdown {
  font-family: var(--theme__font-family);
  background-color: var(--theme__background-color);
  color: var(--layout__primary-text-color);
}
.checkbox-dropdown__select-box {
  background-color: var(--theme__background-color);
  color: var(--layout__primary-text-color);
  border-color: var(--theme__search-bar__outline-color);
}
.checkbox-dropdown__content {
  background-color: var(--theme__background-color);
  color: var(--layout__primary-text-color);
  border-color: var(--theme__search-bar__outline-color);
}
.checkbox-dropdown__content label:hover {
  background-color: #1e90ff;
}
/* Input Dropdown */
.input-dropdown {
  font-family: var(--theme__font-family);
  background-color: var(--theme__background-color);
  color: var(--layout__primary-text-color);
}
.input-dropdown__input-field__back {
  background-color: #313131;
  color: var(--layout__primary-text-color);
}
.input-dropdown__content {
  background-color: #313131;
  color: var(--layout__primary-text-color);
  border-color: var(--theme__search-bar__outline-color);
}
.input-dropdown__content label:hover,
.input-dropdown__content label:focus {
  background-color: #1e90ff;
}
/* Log */
.log {
  color: #ffffff;
}
.log__time-stamp {
  color: #857df3;
}
.log__source {
  color: #d4d4d4; /* Default color of sources, used on the unknown/unspecified sources */
}
.log__source--background-services {
  color: #8d8d8d;
}
.log__source--game-launcher {
  color: #ffd900;
}
.log__source--router {
  color: #00ff00;
}
.log__source--redirector {
  color: #00ffff;
}


/* ------ Image Preview ------ */
.image-preview {
  background-color: rgba(0, 0, 0, 0.8);
}


/* ------ Main Layout ------ */
.root {
  background-color: var(--theme__title-bar__background-color);
}
.main {
  background-color: var(--theme__background-color);
}


/* ------ TitleBar ------ */
.title-bar {
  background-color: var(--theme__title-bar__background-color);
}
/* Minimize Button */
.title-bar__button-bar__min {
  background-image: url('../images/min.png');
}
.title-bar__button-bar__min:hover {
  background-color: #242428;
}
/* Maximize Button */
.title-bar__button-bar__max {
  background-image: url('../images/max.png');
}
.title-bar__button-bar__max:hover {
  background-color: #242428;
}
/* ... */

